--- a/index.html
+++ b/index.html
@@ -11,37 +11,28 @@
 
 <body>
   <header>
-    <div class="desktop">
-      <div class="logo">
-        <a href="#"><img src="./Resources/Images/ic-logo.svg" alt="colmar logo"></a>
-        <a href="#">
-          <span class="bold">COLMAR</span><span class="lighter">ACADEMY</span>
-        </a>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#">On Campus</a></li>
-          <li><a href="#">Online</a></li>
-          <li><a href="#">For Companies</a></li>
-          <li><a href="#">Sign in</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="mobile">
-      <nav>
-        <ul>
-          <li>
-            <a href="#">
-              <img class="mobile" src="./Resources/Images/ic-logo.svg">
-              <span class="desktop">On Campus</span>
-            </a>
-          </li>
-          <li><a href="#"><img src="./Resources/Images/ic-on-campus.svg"></a></li>
-          <li><a href="#"><img src="./Resources/Images/ic-online.svg"></a></li>
-          <li><a href="#"><img src="./Resources/Images/ic-login.svg"></a></li>
-        </ul>
-      </nav>
-    </div>
+    <nav>
+      <a class="logo" href="#">
+        <img src="./Resources/Images/ic-logo.svg" alt="colmar logo">
+        <span class="desktop bold">COLMAR</span>
+        <span class="desktop lighter">ACADEMY</span>
+      </a>
+      <a href="#">
+        <img class="mobile" src="./Resources/Images/ic-on-campus.svg">
+        <span class="desktop">On Campus</span>
+      </a>
+      <a href="#">
+        <img class="mobile" src="./Resources/Images/ic-online.svg">
+        <span class="desktop">Online</span>
+      </a>
+      <a class="desktop" href="#">
+        For Companies
+      </a>
+      <a href="#">
+        <img class="mobile" src="./Resources/Images/ic-login.svg">
+        <span class="desktop">Sign in</span>
+      </a>
+    </nav>
   </header>
   <main>
     <div class="cover">
@@ -49,120 +40,145 @@
         <img src="./Resources/Images/banner.jpg" alt="banner">
       </div>
       <div class="right">
-        <h1>Learn something new everyday</h1>
-        <h3>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</h3>
-        <button>Start here</button>
+        <div class="content">
+          <h1>Learn something new everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</h3>
+          <div class="button">Start here</div>
+        </div>
       </div>
     </div>
-    <section>
-      <div>
-        <div>
-          <div>
-            <img>
-          </div>
-          <div>
-            <h2>It doesn't hurt to keep practicing</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat.</p>
-            <p><strong>Emanuel, Sr Strategist at Hiring.com</strong></p>
+    <div class="section">
+      <div class="left desktop">
+        <img src="./Resources/Images/information-main.jpg" class="extra-padding">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat.</p>
+        <p><strong>Emanuel, Sr Strategist at Hiring.com</strong></p>
+      </div>
+      <div class="details">
+        <div class="orientation noshade">
+          <img src="./Resources/Images/information-orientation-mobile.jpg" class="mobile">
+          <img src="./Resources/Images/information-orientation.jpg" class="desktop">
+          <div class="description">
+            <h2>Orientation Date</h2>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <a href="#">Read More</a>
           </div>
         </div>
-        <div>
-          <div>
-            <h2></h2>
-            <p></p>
-            <a></a>
+        <div class="orientation noshade">
+          <img src="./Resources/Images/information-campus-mobile.jpg" class="mobile">
+          <img src="./Resources/Images/information-campus.jpg" class="desktop">
+          <div class="description">
+            <h2>Our Campus</h2>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read More</a>
           </div>
-          <div>
-            <h2></h2>
-            <p></p>
-            <a></a>
-          </div>
-          <div>
-            <h2></h2>
-            <p></p>
-            <a></a>
+        </div>
+        <div class="orientation shaded">
+          <img src="./Resources/Images/information-guest-lecture-mobile.jpg" class="mobile">
+          <img src="./Resources/Images/information-guest-lecture.jpg" class="desktop">
+          <div class="description">
+            <h2>Special guest lecture</h2>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <a href="#">Read More</a>
           </div>
         </div>
       </div>
-    </section>
-    <section>
+    </div>
+    <div class="courses">
+      <h1>Start learning</h1>
       <div>
-        <h1>Start learning</h1>
-        <div>
-          <div>
-            <div>
-              <img>
-            </div>
-            <div>
+        <div class="topics">
+          <div class="boxes">
+            <img src="Resources/Images/course-software.jpg" class="desktop">            
+            <div class="course-description">
               <h2>Software engineering</h2>
-              <h3>Courses</h3>
-              <p>Web Development, Mobile, Development, iOT, APIs</p>
+              <h3 class="desktop">COURSES</h3>
+              <p class="desktop">Web Development, Mobile, Development, iOT, APIs</p>
             </div>
-            <div>
+          </div>
+          <div class="boxes">
+            <img src="Resources/Images/course-computer-art.jpg" class="desktop">
+            <div class="course-description">
               <h2>Computer Art</h2>
-              <h3>Courses</h3>
-              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation </p>
+              <h3 class="desktop">COURSES</h3>
+              <p class="desktop">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation </p>
             </div>
-            <div>
+          </div>
+          <div class="boxes">
+            <img src="./Resources/Images/course-design.jpg" class="desktop">
+            <div class="course-description">
               <h2>Design</h2>
-              <h3>Courses</h3>
-              <p>User Experience Design, User</p>
+              <h3 class="desktop">COURSES</h3>
+              <p class="desktop">User Experience Design, User</p>
             </div>
           </div>
-          <div>
-            <div>
+          <div class="boxes">
+            <img src="./Resources/Images/course-data.jpg" class="desktop">
+            <div class="course-description">
               <h2>Data</h2>
-              <h3>Courses</h3>
-              <p>Data Science, Big Data, SQL, Data Visualization</p>
+              <h3 class="desktop">COURSES</h3>
+              <p class="desktop">Data Science, Big Data, SQL, Data Visualization</p>
             </div>
-            <div>
+          </div>
+          <div class="boxes">
+            <img src="./Resources/Images/course-data.jpg" class="desktop">
+            <div class="course-description">
               <h2>Business</h2>
-              <h3>Courses</h3>
-              <p>Product Development, Business Development, Startup</p>
+              <h3 class="desktop">COURSES</h3>
+              <p class="desktop">Product Development, Business Development, Startup</p>
             </div>
-            <div>
+          </div>
+          <div class="boxes">
+            <img src="./Resources/Images/course-data.jpg" class="desktop">
+            <div class="course-description">
               <h2>Marketing</h2>
-              <h3>Courses</h3>
-              <p>Analytics, Content Marketing, Mobile Marketing</p>
+              <h3 class="desktop">COURSES</h3>
+              <p class="desktop">Analytics, Content Marketing, Mobile Marketing</p>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <section>
-      <div>
-        <h1>Thesis exhibits</h1>
-        <div>
-          <video></video>
-          <h2>Reimagine urban</h2>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed
-            non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
-            tristique ligula."</p>
+    </div>
+    <div class="thesis">
+      <h1>Thesis exhibits</h1>
+      <div class="section">
+        <div class="left desktop">
+        <video src="./Resources/Videos/thesis.mp4" controls>Video not</video>
+        <h2>Reimagine urban</h2>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed
+          non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+          tristique ligula."</p>
+      </div>
+        <div class="mobile">
+        <video src="./Resources/Videos/thesis.mp4" controls>Video not</video>
+      </div>
+         <div class="details desktop">
+        <div class="orientation shaded">
+          <img src="Resources/Images/thesis-fisma.jpg">
+          <div class="description">
+          <h2>Fisma: Design and Prototype</h1>
+          <p>Designers showcase of new prototype product</p>
         </div>
-        <div>
-          <div>
-            <h1>Fisma: Design and Prototype</h1>
-            <p>Designers showcase of new prototype product</p>
-          </div>
-          <div>
-            <h1>Now and then</h1>
-            <p>Research study about New York</p>
-          </div>
+        </div>
+        <div class="orientation">
+          <img src="Resources/Images/thesis-now-and-then.jpg">
+          <div class="description">
+          <h2>Now and then</h1>
+          <p>Research study about New York</p>
         </div>
       </div>
-
-    </section>
+    </div>
+    </div>
+    </div>
   </main>
   <footer>
-    <h3>&copy;2020 Colmar Academy. All rights reserved.</h3>
-    <nav>
-      <ul>
-        <li>Terms</li>
-        <li>Privacy</li>
-      </ul>
-    </nav>
+    <h3 class="move">&copy;2020 Colmar Academy. All rights reserved.</h3>
+    <div class="links">
+    <a href="#">Terms</a>
+    <a href="#">Privacy</a>
+  </div>
   </footer>
 </body>
 
